Add startup parameter to allow Java Security Manager in Java 23